--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.0",
     "react-slick": "^0.30.3",
